# fault-tolerance-economics

./: CITATION.cff  README.md  pyproject.toml
examples/: estimate_shor.py
notebooks/: 01_shor_resource_estimate.ipynb
reports/: shor-rsa2048-resource-estimate.md
src/fteconomics/: __init__.py  algorithm_cost.py  cli.py  cost_model.py  frontier.py  hardware_profiles.py  qec_overhead.py  report.py  viz.py
tests/: test_cost_model.py  test_frontier.py
