[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fault-tolerance-economics"
version = "0.1.0"
description = "Quantitative resource and cost modelling for fault-tolerant quantum computing, including a Shor / RSA-2048 physical-qubit estimate."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andrew Fogelis" }]
keywords = ["quantum-error-correction", "resource-estimation", "shor", "surface-code", "fault-tolerance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "jupyter>=1.0", "nbformat>=5.9"]

[project.scripts]
fteconomics = "fteconomics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["fteconomics"]
